# FIXED Top lands leaderboard signs could produce exception