@@ -455,11 +455,78 @@ chunk:
       # Remove all monsters on chunk load?
       # NOTE: This will only work if monster spawning is disabled in the chunk.
       remove-on-load: false
+      # If monster spawning disabled, these monsters won't spawn. So you can decide, which monsters shouldn't spawn
+      # The latest spigot version entities: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/entity/EntityType.html
+      monster-list:
+        - 'BLAZE'
+        - 'CAVE_SPIDER'
+        - 'CREEPER'
+        - 'DROWNED'
+        - 'ELDER_GUARDIAN'
+        - 'ENDER_DRAGON'
+        - 'ENDERMAN'
+        - 'ENDERMITE'
+        - 'EVOKER'
+        - 'EVOKER'
+        - 'GHAST'
+        - 'GIANT'
+        - 'GUARDIAN'
+        - 'HUSK'
+        - 'ILLUSIONER'
+        - 'MAGMA_CUBE'
+        - 'PHANTOM'
+        - 'PIG_ZOMBIE'
+        - 'PILLAGER'
+        - 'RAVAGER'
+        - 'SHULKER'
+        - 'SILVERFISH'
+        - 'SKELETON'
+        - 'SKELETON_HORSE'
+        - 'SLIME'
+        - 'SPIDER'
+        - 'STRAY'
+        - 'VEX'
+        - 'VINDICATOR'
+        - 'WITCH'
+        - 'WITHER'
+        - 'WITHER_SKELETON'
+        - 'ZOMBIE'
+        - 'ZOMBIE_HORSE'
+        - 'ZOMBIE_VILLAGER'
     #
     # ANIMAL_SPAWN
     # Allow animal spawning in the chunk / land?
     animal_spawn:
       default_61: true
+      # If animals spawning disabled, these animals won't spawn. So you can decide, which animals shouldn't spawn
+      # The latest spigot version entities: https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/entity/EntityType.html
+      animal-list:
+        - 'BAT'
+        - 'BLAZE'
+        - 'CAT'
+        - 'CHICKEN'
+        - 'COD'
+        - 'COW'
+        - 'DOLPHIN'
+        - 'DONKEY'
+        - 'FOX'
+        - 'HORSE'
+        - 'LLAMA'
+        - 'MULE'
+        - 'MUSHROOM_COW'
+        - 'OCELOT'
+        - 'PANDA'
+        - 'PARROT'
+        - 'PIG'
+        - 'POLAR_BEAR'
+        - 'PUFFERFISH'
+        - 'RABBIT'
+        - 'SALMON'
+        - 'SHEEP'
+        - 'SQUID'
+        - 'TROPICAL_FISH'
+        - 'TURTLE'
+        - 'WOLF'
     #
     # WATERFLOW_ALLOW
     # Allow waterflow from a wilderness to the chunk / land?
