@@ -1,6 +1,6 @@
 name: Lands
 main: me.angeschossen.lands.Lands
-version: 4.1.0.6
+version: 4.1.0.8
 author: Angeschossen
 description: Feature rich GUI, Taxes, Customize your own, Titles, New factions - Let players manage their land!
 website: https://www.spigotmc.org/resources/53313
@@ -51,10 +51,10 @@ permissions:
         description: Player doesn't need to pay claim and land creation costs
         default: op
         children:
-          lands.free.chunks.<Number>:
+          lands.free.chunks.NUMBER:
             description: Set free chunk claims
             default: op
-          lands.free.lands.<Lands>:
+          lands.free.lands.NUMBER:
             description: Set free land creations
             default: op
       lands.command.*:
