@@ -1,1 +1,12 @@
-# FIXED Top lands leaderboard signs could produce exception
++ ADDED Option to customize animal spawning setting
+You can add / remove entities from this setting
+Setting: animal-list
+Please note that the default entity values are for 1.14.x
+You'll need to edit them if you're using 1.13.x
+
+
++ ADDED Option to customize monster spawning setting
+You can add / remove entities from this setting
+Setting: monster-list
+Please note that the default entity values are for 1.14.x
+You'll need to edit them if you're using 1.13.x
